--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
 	"scripts": {
-		"start": "webpack-dev-server",
-		"build": "webpack"
+		"start": "webpack serve --https",
+		"build": "webpack --config webpack.prod.js"
 	},
 	"devDependencies": {
-		"copy-webpack-plugin": "^5.0.3",
-		"css-loader": "^4.2.0",
-		"file-loader": "^6.0.0",
+		"copy-webpack-plugin": "^11.0.0",
+		"css-loader": "^6.8.1",
 		"to-string-loader": "^1.1.6",
 		"ts-loader": "^5.4.5",
-		"ttf-loader": "^1.0.2",
 		"typescript": "^3.4.5",
-		"uglifyjs-webpack-plugin": "^2.1.2",
 		"url-loader": "^4.1.0",
-		"webpack": "^4.30.0",
-		"webpack-cli": "^3.3.1",
-		"webpack-dev-server": "^3.3.1"
+		"webpack": "^5.72.0",
+		"webpack-cli": "^4.9.2",
+		"webpack-dev-server": "^4.15.1"
 	},
 	"dependencies": {
 		"@types/node": "^11.13.9",
